Refactored day1 and updated readme